--- a/tabel_alternatief/tabel.css
+++ b/tabel_alternatief/tabel.css
@@ -1,6 +1,9 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
 
@@ -13,9 +16,26 @@ table {
 th {
     background-color: black;
     color: white;
+    text-align: left;
+    font-size: 0.9em;
     border: 1px solid black;
+    padding: 11px;
+}
+
+#Firstname {
+    border-right: 1px solid white;
+}
+
+#Lastname {
+    border-right: 1px solid white;
 }
 
 td {
     border: 1px solid black;
+    padding: 10px;
+    margin-left: 50px;
+}
+
+td:nth-child(even) {
+    background-color: #eeeeee;
 }
