--- a/tabel_alternatief/tabel.css
+++ b/tabel_alternatief/tabel.css
@@ -10,7 +10,9 @@ h1 {
 table {
     border: 1px solid black;
     border-collapse: collapse;
-    width: 700px;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th {
@@ -34,8 +36,23 @@ td {
     border: 1px solid black;
     padding: 10px;
     margin-left: 50px;
+    font-size: 0.9em;
 }
 
-td:nth-child(even) {
+tr:nth-child(even) {
     background-color: #eeeeee;
+}
+
+tr:nth-child(odd) {
+    background-color: #dddddd;
+}
+
+tr:nth-child(6) {
+    background-color: #ff6248;
+}
+
+caption {
+    caption-side: bottom;
+    margin: 10px;
+    font-size: 0.7em;
 }
